[gd_scene load_steps=31 format=2]

[ext_resource path="res://Scripts/archer.gd" type="Script" id=1]
[ext_resource path="res://Assets/archer-walk.png" type="Texture" id=2]
[ext_resource path="res://Assets/progress-bar-progress.png" type="Texture" id=3]
[ext_resource path="res://Assets/progress-bar-under.png" type="Texture" id=4]
[ext_resource path="res://Assets/bounding box.png" type="Texture" id=5]
[ext_resource path="res://Assets/archer-attack.png" type="Texture" id=6]
[ext_resource path="res://Scenes/Arrow.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/dust.tscn" type="PackedScene" id=10]

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.52708
height = 0.0

[sub_resource type="CircleShape2D" id=2]
radius = 100.0

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;

uniform vec4 origin:hint_color;
uniform vec4 new:hint_color;
uniform bool isEnemy;

void fragment() {
    vec4 current_pixel = texture(TEXTURE, UV);

 	if(isEnemy == true && distance(current_pixel, origin) < 0.01)
        COLOR = new;
	else
		COLOR = current_pixel;
}"

[sub_resource type="ShaderMaterial" id=4]
resource_local_to_scene = true
shader = SubResource( 3 )
shader_param/origin = Color( 0.294118, 0.411765, 0.184314, 1 )
shader_param/new = Color( 0.619608, 0.117647, 0.117647, 1 )
shader_param/isEnemy = false

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 6 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 6 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 6 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 6 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 6 )
region = Rect2( 96, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 2 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 2 )
region = Rect2( 112, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=21]
animations = [ {
"frames": [ SubResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "attack",
"speed": 7.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "walk",
"speed": 10.0
} ]

[sub_resource type="Animation" id=22]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 35.0, 49.2, 90.0 ]
}

[node name="archer" type="KinematicBody2D"]
script = ExtResource( 1 )
attackRange = 100
baseCritChance = 0.05
footDust = ExtResource( 10 )
type = "range"
arrow = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.412357, -1.09905 )
shape = SubResource( 1 )

[node name="StopTimer" type="Timer" parent="."]
one_shot = true

[node name="HealthBar" type="TextureProgress" parent="."]
margin_left = -8.0
margin_top = -18.9903
margin_right = 8.0
margin_bottom = -15.9903
step = 0.0
value = 50.0
texture_under = ExtResource( 4 )
texture_over = ExtResource( 5 )
texture_progress = ExtResource( 3 )
tint_under = Color( 0.996078, 0.192157, 0.0627451, 0.419608 )
tint_over = Color( 0, 0, 0, 0 )
tint_progress = Color( 0.309804, 0.894118, 0.729412, 1 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VisionRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="VisionRange"]
visible = false
shape = SubResource( 2 )

[node name="AvoidRayCast" type="Node2D" parent="."]

[node name="Front" type="RayCast2D" parent="AvoidRayCast"]
rotation = -1.57079
enabled = true
cast_to = Vector2( 0, 20 )

[node name="Sprite" type="AnimatedSprite" parent="."]
material = SubResource( 4 )
position = Vector2( 0, 0.0787449 )
frames = SubResource( 21 )
animation = "idle"
playing = true
offset = Vector2( 0, -8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Die = SubResource( 22 )

[connection signal="timeout" from="StopTimer" to="." method="_on_StopTimer_timeout"]
[connection signal="body_entered" from="VisionRange" to="." method="_on_VisionRange_body_entered"]
[connection signal="body_exited" from="VisionRange" to="." method="_on_VisionRange_body_exited"]
[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
